--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "https://chatbotaibackend.onrender.com/api/$1"
+            "destination": "https://chatbotaibackend.onrender.com"
         },
         {
             "source": "/(.*)",
